--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+
+*{
+  box-sizing: border-box;
+  margin: 0; 
+  padding: 0;
+}
+
+p{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.6rem;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +23,67 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.app{
+  width: 100%;
+  height: 100vh;
+  position: relative; 
+  /* background-color: rgba(0,0,0,0.4); */
+}
+
+.temp{
+  font-size: 3rem; 
+}
+
+.app .top{
+  width: 100%;
+  margin: 1rem auto; 
+}
+
+.container{
+  max-width: 700px;
+  height: 700px;
+  margin: auto;
+  padding: 0 1rem;
+  position: relative;
+  top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.app .description{
+  position: relative;
+  right: -90%;
+  transform-origin: 0 0;
+  transform: rotate(270deg);
+}
+
+.app .bottom{
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 100%;
+  margin: 1rem auto;
+  padding: 1rem;
+  border-radius: 12px;
+  background-color: rgba(99, 95, 95, 0.2);
+}
+
+.bold{
+  font-weight: 700;
+}
+
+.app .search{
+  text-align: center;
+  padding: 1rem;
+}
+
+.app input{
+  padding: .7rem 1.5rem;
+  font-size: 1.2rem;
+  border-radius: 25px ;
+  border: 1px solid rgba(21, 20, 20, 0.2);
+  background-color: rgba(21, 20, 20, 0.2);
 }
